<resources>
    <string name="app_name">Evaluation_Task</string>
    <string name="name">Name</string>
    <string name="registration">REGISTRATION</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email-ID</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="phone_number1">Phone Number</string>
    <string name="password1">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="welcomesplash">WELCOME!</string>
    <string name="welcome2">WELCOME</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
</resources>